; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/chrome/extr_cros_ec.c_cros_ec_unregister.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/chrome/extr_cros_ec.c_cros_ec_unregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cros_ec_device = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cros_ec_unregister(%struct.cros_ec_device* %0) #0 {
  %2 = alloca %struct.cros_ec_device*, align 8
  store %struct.cros_ec_device* %0, %struct.cros_ec_device** %2, align 8
  %3 = load %struct.cros_ec_device*, %struct.cros_ec_device** %2, align 8
  %4 = getelementptr inbounds %struct.cros_ec_device, %struct.cros_ec_device* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.cros_ec_device*, %struct.cros_ec_device** %2, align 8
  %9 = getelementptr inbounds %struct.cros_ec_device, %struct.cros_ec_device* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @platform_device_unregister(i64 %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load %struct.cros_ec_device*, %struct.cros_ec_device** %2, align 8
  %14 = getelementptr inbounds %struct.cros_ec_device, %struct.cros_ec_device* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = call i32 @platform_device_unregister(i64 %15)
  ret i32 0
}

declare dso_local i32 @platform_device_unregister(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
